# TengineFactory

./: .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: dummpy.cpp
docs/: README.md  _coverpage.md  _navbar.md  _sidebar.md  api.md  contribution.md  index.html  jsonconfig.md  quickstart.md
docs/zh-cn/: README.md  _sidebar.md  api.md  contribution.md  jsonconfig.md  quickstart.md
framework/: TFactoryComponent.hpp  ds.hpp
framework/config/: AnalysisConfig.cpp  AnalysisConfig.hpp  Dataset.cpp  Dataset.hpp  DatasetCore.cpp  DatasetCore.hpp
framework/image/: CMakeLists.txt  ImageBlitter.cpp  ImageFloatBlitter.cpp  ImageProcess.cpp  ImageSampler.cpp  ImageTool.cpp  Matrix_CV.cpp  MemoryUtils.cpp
framework/image/include/: AutoStorage.h  ErrorCode.hpp  ImageBlitter.hpp  ImageFloatBlitter.hpp  ImageProcess.hpp  ImageSampler.hpp  ImageTool.hpp  Macro.h  Matrix.h  MemoryUtils.h  Rect.h  SkNx.h  SkNx_neon.h  TengineDefine.h
framework/pipeline/: LineBase.hpp  LineData.hpp  LineFunc.cpp  LineFunc.hpp  MutiInputLine.cpp  MutiInputLine.hpp  PipeLine.cpp  PipeLine.hpp  StandardLine.cpp  StandardLine.hpp  StreamInputLine.cpp  StreamInputLine.hpp
framework/postprocess/: BackendProcess.cpp  BackendProcess.hpp
framework/preprocess/: GenerateAnchor.cpp  GenerateAnchor.hpp  ImageDispose.cpp  ImageDispose.hpp
framework/tengine/: TengineData.hpp  WrapExecution.cpp  WrapExecution.hpp
framework/tfac/: TFactoryComponent.cpp  TFactoryProcess.cpp
framework/video/: InputHandler.cpp  InputHandler.hpp
include/: TFactoryComponent.hpp  TFactoryProcess.hpp
libs/: README.md
sample/FaceDemo/: .gitignore  config.json
sample/FaceDemo/src/: main.cpp
sample/FaceDemoVideo/: CMakeLists.txt  config.json  make.sh
sample/FaceDemoVideo/model/: detect.tmfile
sample/FaceDemoVideo/src/: main.cpp
sample/MobileNetSSD/: config.json
sample/MobileNetSSD/src/: main.cpp
test/jsonFile/: config.json
tools/: SplitString.cpp  SplitString.hpp  TFactoryFiles.cpp  TFactoryFiles.hpp  TFactoryTime.cpp  TFactoryTime.hpp
